[package]
name = "tcmu"
version = "0.1.0"
edition = "2024"
description = "Generic SCSI/TCMU command processor for implementing user-space block devices"
license = "MIT"
repository = "https://github.com/danielnorberg/tcmu"

[features]
## Enables `tcmu::target`: configfs lifecycle management and UIO event loop.
## Requires Linux with `target_core_user` (and optionally `tcm_loop`) loaded.
linux-target = ["dep:libc"]

[dependencies]
anyhow = "1.0"
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.5"
libc = "0.2"
tempfile = "3"

[[bench]]
name = "file_read"
harness = false
required-features = ["linux-target"]
